fix: contact form was overlapping over footer

--- a/assets/scss/partials/_contact.scss
+++ b/assets/scss/partials/_contact.scss
@@ -1,7 +1,7 @@
 // Contact form
 
 .contact {
-  min-height: 85vh;
+  min-height: 95vh;
   padding-top: 1rem;
   fieldset {
     border: 1px solid $lightYellow;
